# rcon-demo

./: Cargo.toml  Dockerfile  fly.toml
src/: main.rs  packet.rs  rcon_minecraft.rs
