[package]
name = "rcon-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["charset", "http2", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
urlencoding = "2.1.3"
